Refactored heaps, started porting across tests.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,1 @@
-Stephan Jaekel <steph@rdev.info>Jannis Leidel <jannis@leidel.info>
+Stephan Jaekel <steph@rdev.info>Jannis Leidel <jannis@leidel.info>Bradley Ayers <bradley.ayers@gmail.com>
